# customer-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/processed/: conversations-1750493143.csv
data/raw/: conversations-1750493143.json
notebooks/: 00_data_generartion.ipynb
src/: __init__.py  agent.py  chat.py  constants.py  evaluate_jaccard.py  graph.py  main.py  recommender.py  train_gat.py
